feat: client address crud (#3)
